--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="container">
         <header>
-            <h1 style="font-size: 80px; font-weight: bold; margin-top: 2.5%">Igor Iurevici</h1>
-            <h1 style="font-size: 50px; font-weight: bold;">VR Developer</h1>
+            <h1 class="title">Igor Iurevici</h1>
+            <h1 class="subtitle">VR Developer</h1>
             <hr class="underline">
         </header>
 
