link preview fixes

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta property="og:title" content="Igor Iurevici">
     <meta property="og:description" content="Hello world, my name is Igor Iurevici. 
 I'm a VR developer passionate about creating bizzare immersive virtual experiences.">
-    <meta property="og:image" content="./images/bg-original">
+    <meta property="og:image" content="./images/bg-original.png">
     <meta property="og:url" content="igor-iurevici.github.io">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="./images/bg-original.png">
     <meta name="twitter:title" content="Igor Iurevici">
     <meta name="twitter:description" content="Hello world, my name is Igor Iurevici. 
 I'm a VR developer passionate about creating bizzare immersive virtual experiences.">
