linke preview fixes

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link preview -->
     <meta property="og:title" content="Igor Iurevici">
-    <meta property="og:description" content="Hello world, my name is Igor Iurevici. 
-I'm a VR developer passionate about creating bizzare immersive virtual experiences.">
-    <meta property="og:image" content="./images/bg-original.png">
-    <meta property="og:url" content="igor-iurevici.github.io">
-    <meta name="twitter:card" content="./images/bg-original.png">
     <meta name="twitter:title" content="Igor Iurevici">
-    <meta name="twitter:description" content="Hello world, my name is Igor Iurevici. 
-I'm a VR developer passionate about creating bizzare immersive virtual experiences.">
-    <meta name="twitter:image" content="igor-iurevici.github.io">
+
+    <meta property="og:description" content="Hello world, my name is Igor Iurevici. I'm a VR developer passionate about creating bizzare immersive virtual experiences.">
+    <meta name="twitter:description" content="Hello world, my name is Igor Iurevici. I'm a VR developer passionate about creating bizzare immersive virtual experiences.">
+
+    <meta property="og:image" content="./images/bg-original.png">
+    <meta name="twitter:image" content="./images/bg-original.png">
+
+    <meta property="og:url" content="igor-iurevici.github.io">
+    <meta name="twitter:card" content="igor-iurevici.github.io">
+
     <title>Igor Iurevici</title>
     <link rel="icon" href="./images/logo.png" type="image/x-icon">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
