linke preview fixes

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:description" content="Hello world, my name is Igor Iurevici. I'm a VR developer passionate about creating bizzare immersive virtual experiences.">
     <meta name="twitter:description" content="Hello world, my name is Igor Iurevici. I'm a VR developer passionate about creating bizzare immersive virtual experiences.">
 
-    <meta property="og:image" content="./images/bg-original.png">
-    <meta name="twitter:image" content="./images/bg-original.png">
+    <meta property="og:image" content="./images/preview.png">
+    <meta name="twitter:image" content="./images/preview.png">
 
-    <meta property="og:url" content="igor-iurevici.github.io">
-    <meta name="twitter:card" content="igor-iurevici.github.io">
+    <meta property="og:url" content="https://igor-iurevici.github.io">
+    <meta name="twitter:card" content="https://igor-iurevici.github.io">
 
     <title>Igor Iurevici</title>
     <link rel="icon" href="./images/logo.png" type="image/x-icon">
@@ -57,10 +57,10 @@
                             <a href="https://www.lucapagan.info" target="_blank">Luca Pagan</a>, with the collaboration of the 
                             <a href="https://rehab.iit.it" target="_blank">Rehab Technology Lab</a> of 
                             <a href="https://www.iit.it/en-US/" target="_blank">Italian Institute of Technology</a>. <br/>
-                            It consists in immersing the test user with a prosthetic leg in an infinite corridor environment
+                            It consists in immersing the test user with a prosthetic leg in an infinite corridor virtual environment
                             with four different setups. For each setup the user experiences different footsteps sound triggered by
                             devices able to detect pressure.
-                            The virtual environment, empowered by the sound system, aims to explore the connection between the body, sound impulses and digital reality.<br/>
+                            The virtual environment, empowered by the sound system, aims to explore the connection between the body, sound impulses and the digital world.<br/>
                             An exhibition of the project occured at 
                             <a href="https://ars.electronica.art/festival/en/" target="_blank">Ars Electronica Festival</a> 2023.
                       </p>
