--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <header>
             <h1 class="title">Igor Iurevici</h1>
-            <h1 class="subtitle">VR Developer</h1>
+            <h1 class="subtitle">Software Developer</h1>
             <hr class="underline">
         </header>
 
@@ -34,7 +34,8 @@
             <h2>About</h2>
             <p>
                 Hello world, my name is Igor Iurevici. <br/>
-                I'm a VR developer passionate about creating bizzare immersive virtual experiences.
+                I'm a software developer, working to bring bizzare immersive experiences in virtual reality. <br/>
+                I like the tech that surrounds the XR world, but also pixel art and live coding.
             </p>
         </section>
 
