--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <div class="container">
         <header>
             <h1 class="title">Igor Iurevici</h1>
-            <h1 class="subtitle">Software Developer</h1>
+            <div class="subsection" style="margin-top: -40px"></div>
+            <!--<h1 class="subtitle">Software Developer</h1>-->
             <hr class="underline">
         </header>
 
@@ -35,7 +36,7 @@
             <p>
                 Hello world, my name is Igor Iurevici. <br/>
                 I'm a software developer, working to bring bizzare immersive experiences in virtual reality. <br/>
-                I like the tech that surrounds the XR world, but also pixel art and live coding.
+                I like to explore new tech influencing the XR world - but also pixel art and live coding.
             </p>
         </section>
 
@@ -43,7 +44,7 @@
         <section class="projects">
             <h2>Projects</h2>
             <p>
-              Below a deep dive into my main projects I'm most proud of.
+              Below a deep dive into the projects I'm most proud of.
             </p>
             <!-- Divergences -->
             <section class="subsection">
