--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>
                 Hello world, my name is Igor Iurevici. <br/>
                 I'm a software developer, working to bring bizzare immersive experiences in virtual reality. <br/>
-                I like to explore new tech influencing the XR world - but also pixel art and live coding.
+                I like to explore new tech surrounding the extended reality (XR) world - but also pixel art and live coding.
             </p>
         </section>
 
