--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <section class="about">
             <h2>About</h2>
             <p>
-                Hello world, my name is Igor Iurevici. <br/>
+                Hello world!<br/>
                 I'm a software developer, working to bring bizzare immersive experiences in virtual reality. <br/>
-                I like to explore new tech surrounding the extended reality (XR) world - but also pixel art and live coding.
+                I like to explore new tech surrounding the extended reality world - but also pixel art and live coding.
             </p>
         </section>
 
