--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>
                 Hello world!<br/>
                 I'm a software developer, working to bring bizzare immersive experiences in virtual reality. <br/>
-                I like to explore new tech surrounding the extended reality world - but also pixel art and live coding.
+                I like to explore new tech shaping the extended reality world - but also pixel art and live coding.
             </p>
         </section>
 
