--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 <body>
     <div class="container">
         <header>
-            <h1 class="title">Igor Iurevici</h1>
-            <div class="subsection" style="margin-top: -40px"></div>
+            <h1 class="title">Igor • Iurevici</h1>
+            <div class="subsection" style="margin-top: -38px"></div>
             <!--<h1 class="subtitle">Software Developer</h1>-->
             <hr class="underline">
         </header>
 
         <!-- ABOUT -->
         <section class="about">
-            <h2>About</h2>
+            <h2>• About •</h2>
             <p>
                 Hello world!<br/>
                 I'm a software developer, working to bring bizzare immersive experiences in virtual reality. <br/>
@@ -42,7 +42,7 @@
 
         <!-- PROJECTS -->
         <section class="projects">
-            <h2>Projects</h2>
+            <h2>• Projects •</h2>
             <p>
               Below a deep dive into the projects I'm most proud of.
             </p>
@@ -130,7 +130,7 @@
 
         <!-- CONTACTS -->
         <section class="contact">
-            <h2>Contacts</h2>
+            <h2>• Contacts •</h2>
             <a href="mailto:igor.iurevici95@gmail.com" target="_blank">Email</a> |
             <a href="https://linkedin.com/in/igor.iurevici" target="_blank">LinkedIn</a> |
             <a href="https://github.com/everyvoid" target="_blank">GitHub</a>
