--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
     <meta name="twitter:card" content="https://igor-iurevici.github.io">
 
     <title>Igor Iurevici</title>
-    <link rel="icon" href="./images/logo.png" type="image/x-icon">
+    <link rel="icon" href="./images/logo.ico" type="image/x-icon">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <div class="container">
+        <!-- TITLE -->
         <header>
             <h1 class="title">Igor • Iurevici</h1>
+            <!-- yeah this is ugly :( -->
             <div class="subsection" style="margin-top: -35px"></div>
-            <!--<h1 class="subtitle">Software Developer</h1>-->
             <hr class="underline">
         </header>
 
@@ -51,7 +52,6 @@
             <section class="subsection">
                 <h3 class="collapsible">Divergences</h3>
                 <div class="dropdown">
-                <!--<hr class="underline-subsection">-->
                     <div class="project-details">
                         <p>
                             The 
