--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:card" content="https://igor-iurevici.github.io">
 
     <title>Igor Iurevici</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-logo.png">
+    <link rel="apple-touch-icon" href="./images/apple-touch-logo.png">
     <link rel="icon" href="./images/logo.ico" type="image/x-icon">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
