another logo fix

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>Igor Iurevici</title>
     <!--<link rel="apple-touch-icon" href="./images/apple-touch-logo.png">-->
-    <link rel="mask-icon" href="./images/apple-touch-logo.png" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel="stylesheet" href="./css/styles.css">
