--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <meta name="twitter:description" content="Hello world, my name is Igor Iurevici. I'm a VR developer passionate about creating bizzare immersive virtual experiences.">
     <meta name="twitter:image" content="https://igor-iurevici.github.io/images/preview.png">
     <meta name="twitter:card" content="summary_large_image">
-
     <title>Igor Iurevici</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
@@ -52,6 +51,26 @@
             <p>
               Below a deep dive into the projects I'm most proud of.
             </p>
+            
+            <!-- UEVR -->
+            <section class="subsection">
+                <h3 class="collapsible">UEs in VR</h3>
+                <div class="dropdown">
+                  <!--<hr class="underline-subsection">-->
+                    <div class="project-details">
+                        <p>UEVR: Brief description of project 3.</p>
+                    </div>
+                    <div class="project-images">
+                        <img src="./images/uevr/environment.png" alt="Project 1" onclick="expandImage(this)">
+                        <img src="./images/uevr/menu.png" alt="Project 2" onclick="expandImage(this)">
+                        <img src="./images/uevr/screen.png" alt="Project 2" onclick="expandImage(this)">
+                        <img src="./images/uevr/door.png" alt="Project 2" onclick="expandImage(this)">
+                        <img src="./images/uevr/water.png" alt="Project 2" onclick="expandImage(this)">
+                        <img src="./images/uevr/collect.png" alt="Project 2" onclick="expandImage(this)">
+                    </div>
+                </div>
+            </section>
+
             <!-- Divergences -->
             <section class="subsection">
                 <h3 class="collapsible">Divergences</h3>
@@ -60,12 +79,12 @@
                         <p>
                             The 
                             <a href="https://www.divergences.it" target="_blank">Divergences</a> project is an artistic work started by the visual artist 
-                            <a href="http://sassofederica.com" target="_blank">Federica Sasso</a> and sound deisgner 
+                            <a href="http://sassofederica.com" target="_blank">Federica Sasso</a> and sound designer 
                             <a href="https://www.lucapagan.info" target="_blank">Luca Pagan</a>, with the collaboration of the 
                             <a href="https://rehab.iit.it" target="_blank">Rehab Technology Lab</a> of 
                             <a href="https://www.iit.it/en-US/" target="_blank">Italian Institute of Technology</a>. <br/>
                             It consists in immersing the test user with a prosthetic leg in an infinite corridor virtual environment
-                            with four different setups. For each setup the user experiences different footsteps sound triggered by
+                            with four different lightings and surfaces (marble, water, moquette and grass. For each setup the user experiences different footsteps sound triggered by
                             devices able to detect pressure.
                             The virtual environment, empowered by the sound system, aims to explore the connection between the body, sound impulses and the digital world.<br/>
                             An exhibition of the project occured at 
@@ -73,15 +92,13 @@
                       </p>
                     </div>
                     <div class="project-images">
-                        <img src="./images/divergences_set.jpeg" alt="Project 1" onclick="expandImage(this)">
-                        <img src="./images/divergences_corridor3.jpeg" alt="Project 2" onclick="expandImage(this)">
-                        <img src="./images/test.jpeg" alt="Project 2" onclick="expandImage(this)">
-                        <img src="./images/divergences_corridor3.jpeg" alt="Project 2" onclick="expandImage(this)">
-                        <img src="./images/test.jpeg" alt="Project 2" onclick="expandImage(this)">
-                        <img src="./images/divergences_corridor3.jpeg" alt="Project 2" onclick="expandImage(this)">
-                        <img src="./images/test.jpeg" alt="Project 2" onclick="expandImage(this)">
+                        <img src="./images/divergences/corridor_marble.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/divergences/corridor_water.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/divergences/corridor_moquette.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/divergences/corridor_grass.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/divergences/set_shooting.jpeg" alt="image" onclick="expandImage(this)">
                     </div>
-                    <p class="caption">Pictures from the registration set and screen captures of the experience</p>
+                    <p class="caption">Registration set and screen captures.</p>
                 </div>
             </section>
 
@@ -94,25 +111,10 @@
                         <p>Embodiment: Brief description of project 2.</p>
                     </div>
                     <div class="project-images">
-                        <img src="./images/test.jpeg" alt="Project 1" onclick="expandImage(this)">
-                        <img src="./images/test.jpeg" alt="Project 2" onclick="expandImage(this)">
-                        <img src="./images/test.jpeg" alt="Project 2" onclick="expandImage(this)">
-                    </div>
-                </div>
-            </section>
-
-            <!-- UEVR -->
-            <section class="subsection">
-                <h3 class="collapsible">UEs in VR</h3>
-                <div class="dropdown">
-                  <!--<hr class="underline-subsection">-->
-                    <div class="project-details">
-                        <p>UEVR: Brief description of project 3.</p>
-                    </div>
-                    <div class="project-images">
-                        <img src="./images/test.jpeg" alt="Project 1" onclick="expandImage(this)">
-                        <img src="./images/test.jpeg" alt="Project 2" onclick="expandImage(this)">
-                        <img src="./images/test.jpeg" alt="Project 2" onclick="expandImage(this)">
+                        <img src="./images/embodiment/agents.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/embodiment/environment1.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/embodiment/environment2.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/embodiment/avatar.png" alt="image" onclick="expandImage(this)">
                     </div>
                 </div>
             </section>
@@ -126,9 +128,10 @@
                         <p>BoloFence: Brief description of project 4.</p>
                     </div>
                     <div class="project-images">
-                        <img src="./images/test.jpeg" alt="Project 1" onclick="expandImage(this)">
-                        <img src="./images/test.jpeg" alt="Project 2" onclick="expandImage(this)">
-                        <img src="./images/test.jpeg" alt="Project 2" onclick="expandImage(this)">
+                        <img src="./images/bolofence/dashboard1.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/bolofence/dashboard2.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/bolofence/app1.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/bolofence/app2.png" alt="image" onclick="expandImage(this)">
                     </div>
                 </div>
             </section>
@@ -146,8 +149,6 @@
             <img src="" alt="Expanded Image" id="expandedImage">
         </div>
     </div>
-
-
 
     <!-- SCRIPTS -->
     <script>
