--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                         <img src="./images/bolofence/dashboard2.png" alt="image" onclick="expandImage(this)">
                         <img src="./images/bolofence/app1.png" alt="image" onclick="expandImage(this)">
                         <img src="./images/bolofence/app2.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/bolofence/notification.png" alt="image" onclick="expandImage(this)">
                     </div>
                 </div>
             </section>
