--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h2>About</h2>
             <p>
                 Hello world!<br/>
-                I'm a software developer, working to bring bizzare immersive experiences in virtual reality. <br/>
+                I'm a software developer, working to bring realistic immersive experiences in virtual reality. <br/>
                 I like to explore new tech shaping the extended reality world - but also pixel art and live coding.
             </p>
         </section>
