--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>
                 Hello world!<br/>
                 I'm a software developer, working to bring realistic immersive experiences in virtual reality. <br/>
-                I like to explore new tech shaping the extended reality world - but also pixel art and live coding.
+                I like to try and explore new extended reality tech - but also pixel art and live coding.
             </p>
         </section>
 
