--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <h2>About</h2>
             <p>
                 Hello world!<br/>
-                I'm a software developer, working to bring realistic immersive experiences in virtual reality. <br/>
-                I like to try and explore new extended reality tech - but also pixel art and live coding.
+                I'm a software developer, building realistic immersive virtual experiences. <br/>
+                I like to try and explore new XR tech - but also pixel art and live coding.
             </p>
         </section>
 
