--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
         <section class="contact">
             <h2>Contacts</h2>
             <a href="mailto:igor.iurevici95@gmail.com" target="_blank">Email</a> |
-            <a href="https://linkedin.com/in/igor.iurevici" target="_blank">LinkedIn</a> |
-            <a href="https://github.com/everyvoid" target="_blank">GitHub</a>
+            <a href="https://linkedin.com/in/igor-iurevici" target="_blank">LinkedIn</a> |
+            <a href="https://github.com/igor-iurevici" target="_blank">GitHub</a>
         </section>
 
         <!-- Image overlay for expanding images -->
