--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                         <img src="./images/embodiment/environment1.png" alt="image" onclick="expandImage(this)">
                         <img src="./images/embodiment/environment2.png" alt="image" onclick="expandImage(this)">
                         <img src="./images/embodiment/avatar.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/embodiment/exhibition.png" alt="image" onclick="expandImage(this)">
                     </div>
                 </div>
             </section>
