--- a/index.html
+++ b/index.html
@@ -56,17 +56,21 @@
             <section class="subsection">
                 <h3 class="collapsible">UEs in VR</h3>
                 <div class="dropdown">
-                  <!--<hr class="underline-subsection">-->
                     <div class="project-details">
-                        <p>UEVR: Brief description of project 3.</p>
+                        <p>
+                            UEs in VR explores the possibility of using and improving the
+                            <a href="https://dl.acm.org/doi/10.1145/2317956.2318008" target="_blank">User Enactments</a> technique be emulating it in a virtual environment. <br/>
+                            A smart home environment with realistic physics and interactions has been developed in order to explore the user perception of a 
+                            (simulated) pro-active AI voice present in the house.
+                        </p>
                     </div>
                     <div class="project-images">
-                        <img src="./images/uevr/environment.png" alt="Project 1" onclick="expandImage(this)">
-                        <img src="./images/uevr/menu.png" alt="Project 2" onclick="expandImage(this)">
-                        <img src="./images/uevr/screen.png" alt="Project 2" onclick="expandImage(this)">
-                        <img src="./images/uevr/door.png" alt="Project 2" onclick="expandImage(this)">
-                        <img src="./images/uevr/water.png" alt="Project 2" onclick="expandImage(this)">
-                        <img src="./images/uevr/collect.png" alt="Project 2" onclick="expandImage(this)">
+                        <img src="./images/uevr/environment.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/uevr/menu.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/uevr/screen.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/uevr/door.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/uevr/water.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/uevr/collect.png" alt="image" onclick="expandImage(this)">
                     </div>
                 </div>
             </section>
@@ -83,9 +87,9 @@
                             <a href="https://www.lucapagan.info" target="_blank">Luca Pagan</a>, with the collaboration of the 
                             <a href="https://rehab.iit.it" target="_blank">Rehab Technology Lab</a> of 
                             <a href="https://www.iit.it/en-US/" target="_blank">Italian Institute of Technology</a>. <br/>
-                            It consists in immersing the test user with a prosthetic leg in an infinite corridor virtual environment
-                            with four different lightings and surfaces (marble, water, moquette and grass. For each setup the user experiences different footsteps sound triggered by
-                            devices able to detect pressure.
+                            The test user with a prosthetic leg is immersed in an infinite corridor virtual environment
+                            with four different lightings and surfaces (marble, water, moquette and grass. While walking on a tapis roulant the virtual environment accordingly.
+                            For each setup the user experiences different footsteps sound triggered by devices able to detect pressure.
                             The virtual environment, empowered by the sound system, aims to explore the connection between the body, sound impulses and the digital world.<br/>
                             An exhibition of the project occured at 
                             <a href="https://ars.electronica.art/festival/en/" target="_blank">Ars Electronica Festival</a> 2023.
@@ -98,7 +102,6 @@
                         <img src="./images/divergences/corridor_grass.png" alt="image" onclick="expandImage(this)">
                         <img src="./images/divergences/set_shooting.jpeg" alt="image" onclick="expandImage(this)">
                     </div>
-                    <p class="caption">Registration set and screen captures.</p>
                 </div>
             </section>
 
@@ -106,9 +109,13 @@
             <section class="subsection">
                 <h3 class="collapsible">Embodiment</h3>
                 <div class="dropdown">
-                  <!--<hr class="underline-subsection">-->
                     <div class="project-details">
-                        <p>Embodiment: Brief description of project 2.</p>
+                        <p>
+                            Embodiment project is a way to raise awareness on social difficulties after the pandemic.
+                            The user is familiarized with the new virtual body, while the virtual environment (with 
+                            <a href="https://en.wikipedia.org/wiki/Liminal_space_(aesthetic)" target="_blank">Liminal Space</a> aesthetic)
+                            fills with a crowd of people.
+                        </p>
                     </div>
                     <div class="project-images">
                         <img src="./images/embodiment/agents.png" alt="image" onclick="expandImage(this)">
@@ -126,7 +133,11 @@
                 <div class="dropdown">
                   <!--<hr class="underline-subsection">-->
                     <div class="project-details">
-                        <p>BoloFence: Brief description of project 4.</p>
+                        <p>
+                            BoloFence is a concept of an Android turistic app of the Bologna city.
+                            The app recognize the mobility (walk, bike, car) and accordingly triggers notification when the user enters areas of interest.
+                            A dashboard collects user path data in a privacy coherent way and provides a tool to detect new potential areas of interest.
+                        </p>
                     </div>
                     <div class="project-images">
                         <img src="./images/bolofence/dashboard1.png" alt="image" onclick="expandImage(this)">
