--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 <div class="dropdown">
                     <div class="project-details">
                         <p>
-                            UEs in VR explores the possibility of using and improving the
-                            <a href="https://dl.acm.org/doi/10.1145/2317956.2318008" target="_blank">User Enactments</a> technique be emulating it in a virtual environment. <br/>
+                            UEs in VR explores the possibility of utilizing and improving the
+                            <a href="https://dl.acm.org/doi/10.1145/2317956.2318008" target="_blank">User Enactments</a> technique by emulating it in virtual reality. <br/>
                             A smart home environment with realistic physics and interactions has been developed in order to explore the user perception of a 
                             (simulated) pro-active AI voice present in the house.
                         </p>
@@ -111,10 +111,12 @@
                 <div class="dropdown">
                     <div class="project-details">
                         <p>
-                            Embodiment project is a way to raise awareness on social difficulties after the pandemic.
-                            The user is familiarized with the new virtual body, while the virtual environment (with 
-                            <a href="https://en.wikipedia.org/wiki/Liminal_space_(aesthetic)" target="_blank">Liminal Space</a> aesthetic)
-                            fills with a crowd of people.
+                            The embodiment project, started by 
+                            <a href="http://sassofederica.com" target="_blank">Federica Sasso</a>, 
+                            is a way to raise awareness on post-pandemic social difficulties.
+                            The user is familiarized with the new virtual body, while the 
+                            <a href="https://en.wikipedia.org/wiki/Liminal_space_(aesthetic)" target="_blank">Liminal Space</a> virtual environment 
+                            fills with a crowd of people that gradually surrounds the user.
                         </p>
                     </div>
                     <div class="project-images">
@@ -135,8 +137,8 @@
                     <div class="project-details">
                         <p>
                             BoloFence is a concept of an Android turistic app of the Bologna city.
-                            The app recognize the mobility (walk, bike, car) and accordingly triggers notification when the user enters areas of interest.
-                            A dashboard collects user path data in a privacy coherent way and provides a tool to detect new potential areas of interest.
+                            The app recognizes the user mobility type (walk, bike or car) and accordingly triggers a notification when the user enters an area of interest.
+                            A dashboard collects the user path data, preserving the privacy, and provides a clustering tool able to detect new potential areas of interest.
                         </p>
                     </div>
                     <div class="project-images">
