--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             UEs in VR explores the possibility of utilizing and improving the
                             <a href="https://dl.acm.org/doi/10.1145/2317956.2318008" target="_blank">User Enactments</a> technique by emulating it in virtual reality. <br/>
                             A smart home environment with realistic physics and interactions has been developed in order to explore the user perception of a 
-                            (simulated) pro-active AI voice present in the house.
+                            (simulated) pro-active AI system present in the house.
                         </p>
                     </div>
                     <div class="project-images">
@@ -116,7 +116,9 @@
                             is a way to raise awareness on post-pandemic social difficulties.
                             The user is familiarized with the new virtual body, while the 
                             <a href="https://en.wikipedia.org/wiki/Liminal_space_(aesthetic)" target="_blank">Liminal Space</a> virtual environment 
-                            fills with a crowd of people that gradually surrounds the user.
+                            fills with a crowd of people that gradually surrounds the user. <br/>
+                            Highlights of the project have been exhibited at the
+                            <a href="https://www.vogue.com/photovogue/festival" target="_blank">PhotoVogue Festival</a>.
                         </p>
                     </div>
                     <div class="project-images">
