--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta property="og:site_name" content="igor-iurevici.github.io">
     <meta property="og:url" content="https://igor-iurevici.github.io">
     <meta property="og:description" content="Hello world, my name is Igor Iurevici. I'm a VR developer passionate about creating bizzare immersive virtual experiences.">
-    <meta property="og:image" content="https://igor-iurevici.github.io/images/preview.png">
+    <meta property="og:image" content="https://igor-iurevici.github.io/images/profile.jpeg">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="250">
     <meta property="og:type" content="website">
     <meta name="twitter:title" content="Igor Iurevici">
-    <meta name="twitter:description" content="Hello world, my name is Igor Iurevici. I'm a VR developer passionate about creating bizzare immersive virtual experiences.">
-    <meta name="twitter:image" content="https://igor-iurevici.github.io/images/preview.png">
+    <meta name="twitter:description" content="Hello world, I'm a software developer passionate about creating bizzare immersive experiences in virtual reality.">
+    <meta name="twitter:image" content="https://igor-iurevici.github.io/images/profile.jpeg">
     <meta name="twitter:card" content="summary_large_image">
     <title>Igor Iurevici</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
