--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                             The user is familiarized with the new virtual body, while the 
                             <a href="https://en.wikipedia.org/wiki/Liminal_space_(aesthetic)" target="_blank">Liminal Space</a> virtual environment 
                             fills with a crowd of people that gradually surrounds the user. <br/>
-                            Highlights of the project have been exhibited at the
-                            <a href="https://www.vogue.com/photovogue/festival" target="_blank">PhotoVogue Festival</a>.
+                            Highlights of the development process have been exhibited at the
+                            <a href="https://www.vogue.com/photovogue/festival" target="_blank">PhotoVogue Festival</a> 2022.
                         </p>
                     </div>
                     <div class="project-images">
