link preview edit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Igor Iurevici">
     <meta property="og:site_name" content="igor-iurevici.github.io">
     <meta property="og:url" content="https://igor-iurevici.github.io">
-    <meta property="og:description" content="Hello world, my name is Igor Iurevici. I'm a VR developer passionate about creating bizzare immersive virtual experiences.">
+    <meta property="og:description" content="Hello world, I'm a software developer passionate about creating bizzare immersive experiences in virtual reality.">
     <meta property="og:image" content="https://igor-iurevici.github.io/images/profile.jpeg">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="400">
@@ -59,7 +59,7 @@
                     <div class="project-details">
                         <p>
                             UEs in VR explores the possibility of utilizing and improving the
-                            <a href="https://dl.acm.org/doi/10.1145/2317956.2318008" target="_blank">User Enactments</a> technique by emulating it in virtual reality. <br/>
+                            <a href="https://dl.acm.org/doi/10.1145/2317956.2318008" target="_blank">User Enactments</a> design technique by emulating it in virtual reality. <br/>
                             A smart home environment with realistic physics and interactions has been developed in order to explore the user perception of a 
                             (simulated) pro-active AI system present in the house.
                         </p>
