--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
     <link rel="manifest" href="/images/favicons/site.webmanifest">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <!--<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -73,6 +76,13 @@
                         <img src="./images/uevr/collect.png" alt="image" onclick="expandImage(this)">
                     </div>
                 </div>
+                <div class="tag-container">
+                    <span class="tag">Unity</span>
+                    <span class="tag">C#</span>
+                    <span class="tag">OpenXR</span>
+                    <span class="tag">ProBuilder</span>
+                    <span class="tag">HTC Vive Pro</span>
+                </div>
             </section>
 
             <!-- Divergences -->
@@ -87,10 +97,10 @@
                             <a href="https://www.lucapagan.info" target="_blank">Luca Pagan</a>, with the collaboration of the 
                             <a href="https://rehab.iit.it" target="_blank">Rehab Technology Lab</a> of 
                             <a href="https://www.iit.it/en-US/" target="_blank">Italian Institute of Technology</a>. <br/>
-                            The test user with a prosthetic leg is immersed in an infinite corridor virtual environment
-                            with four different lightings and surfaces (marble, water, moquette and grass. While walking on a tapis roulant the virtual environment accordingly.
-                            For each setup the user experiences different footsteps sound triggered by devices able to detect pressure.
-                            The virtual environment, empowered by the sound system, aims to explore the connection between the body, sound impulses and the digital world.<br/>
+                            The test user with a prosthetic leg is immersed in an infinite virtual corridor.
+                            This environment features four distinct settings with different lighting and surfaces (marble, water, moquette, grass). As the user walks on a treadmill, the virtual environment dynamically adapts to their movements.
+                            For each setup the user experiences different footsteps sounds, which are triggered by pressure-detecting devices.
+                            The virtual environment, empowered by the sound system, aims to explore the relationship between the body, sound impulses, and the digital world.<br/>
                             An exhibition of the project occured at 
                             <a href="https://ars.electronica.art/festival/en/" target="_blank">Ars Electronica Festival</a> 2023.
                       </p>
@@ -103,15 +113,21 @@
                         <img src="./images/divergences/set_shooting.jpeg" alt="image" onclick="expandImage(this)">
                     </div>
                 </div>
+                <div class="tag-container">
+                    <span class="tag">Unity</span>
+                    <span class="tag">C#</span>
+                    <span class="tag">OpenXR</span>
+                    <span class="tag">Quest 2</span>
+                </div>
             </section>
 
-            <!-- Embodiment -->
+            <!-- Antikythera -->
             <section class="subsection">
-                <h3 class="collapsible">Embodiment</h3>
+                <h3 class="collapsible">Antikythera</h3>
                 <div class="dropdown">
                     <div class="project-details">
                         <p>
-                            The embodiment project, started by 
+                            Antikythera is an embodiment project, started by 
                             <a href="http://sassofederica.com" target="_blank">Federica Sasso</a>, 
                             is a way to raise awareness on post-pandemic social difficulties.
                             The user is familiarized with the new virtual body, while the 
@@ -128,6 +144,12 @@
                         <img src="./images/embodiment/avatar.png" alt="image" onclick="expandImage(this)">
                         <img src="./images/embodiment/exhibition.png" alt="image" onclick="expandImage(this)">
                     </div>
+                </div>
+                <div class="tag-container">
+                    <span class="tag">Unity</span>
+                    <span class="tag">C#</span>
+                    <span class="tag">OpenXR</span>
+                    <span class="tag">Quest 2</span>
                 </div>
             </section>
 
@@ -150,6 +172,13 @@
                         <img src="./images/bolofence/app2.png" alt="image" onclick="expandImage(this)">
                         <img src="./images/bolofence/notification.png" alt="image" onclick="expandImage(this)">
                     </div>
+                </div>
+                <div class="tag-container">
+                    <span class="tag">CodeIgniter</span>
+                    <span class="tag">PHP</span>
+                    <span class="tag">PostgreSQL</span>
+                    <span class="tag">PostGIS</span>
+                    <span class="tag">Java</span>
                 </div>
             </section>
 
