--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section class="projects">
             <h2>Projects</h2>
             <p>
-              Below a deep dive into the projects I'm most proud of.
+              The ones I'm most proud of.
             </p>
             
             <!-- UEVR -->
@@ -91,8 +91,7 @@
                 <div class="dropdown">
                     <div class="project-details">
                         <p>
-                            The 
-                            <a href="https://www.divergences.it" target="_blank">Divergences</a> project is an artistic work started by the visual artist 
+                            <a href="https://www.divergences.it" target="_blank">Divergences</a> is an artistic work started by the visual artist 
                             <a href="http://sassofederica.com" target="_blank">Federica Sasso</a> and sound designer 
                             <a href="https://www.lucapagan.info" target="_blank">Luca Pagan</a>, with the collaboration of the 
                             <a href="https://rehab.iit.it" target="_blank">Rehab Technology Lab</a> of 
@@ -129,7 +128,7 @@
                         <p>
                             Antikythera is an embodiment project, started by 
                             <a href="http://sassofederica.com" target="_blank">Federica Sasso</a>, 
-                            is a way to raise awareness on post-pandemic social difficulties.
+                            that raise awareness on post-pandemic social difficulties. <br/>
                             The user is familiarized with the new virtual body, while the 
                             <a href="https://en.wikipedia.org/wiki/Liminal_space_(aesthetic)" target="_blank">Liminal Space</a> virtual environment 
                             fills with a crowd of people that gradually surrounds the user. <br/>
@@ -160,9 +159,9 @@
                   <!--<hr class="underline-subsection">-->
                     <div class="project-details">
                         <p>
-                            BoloFence is a concept of an Android turistic app of the Bologna city.
-                            The app recognizes the user mobility type (walk, bike or car) and accordingly triggers a notification when the user enters an area of interest.
-                            A dashboard collects the user path data, preserving the privacy, and provides a clustering tool able to detect new potential areas of interest.
+                            BoloFence is a concept of an Android turistic app for Bologna city.<br/>
+                            The app recognizes the user mobility type (walk, bike or car) and accordingly triggers a notification when the user enters an area of interest.<br/>
+                            A dashboard collects the user path data, preserving the privacy, and provides a ML clustering tool able to detect new potential areas of interest.
                         </p>
                     </div>
                     <div class="project-images">
