--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                     <span class="tag">OpenXR</span>
                     <span class="tag">ProBuilder</span>
                     <span class="tag">HTC Vive Pro</span>
+                    <a href="https://github.com/igor-iurevici/iurevici-igor-ue-in-vr" target="_blank" class="code-link">Code</a>
                 </div>
             </section>
 
@@ -117,6 +118,7 @@
                     <span class="tag">C#</span>
                     <span class="tag">OpenXR</span>
                     <span class="tag">Quest 2</span>
+                    <a href="https://github.com/igor-iurevici/Divergences" target="_blank" class="code-link">Code</a>
                 </div>
             </section>
 
@@ -149,6 +151,7 @@
                     <span class="tag">C#</span>
                     <span class="tag">OpenXR</span>
                     <span class="tag">Quest 2</span>
+                    <a href="https://github.com/igor-iurevici/EmbodimentVR" target="_blank" class="code-link">Code</a>
                 </div>
             </section>
 
@@ -178,6 +181,7 @@
                     <span class="tag">PostgreSQL</span>
                     <span class="tag">PostGIS</span>
                     <span class="tag">Java</span>
+                    <a href="https://github.com/igor-iurevici/BoloFence" target="_blank" class="code-link">Code</a>
             </section>
 
         <!-- CONTACTS -->
