--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                     <span class="tag">Unity</span>
                     <span class="tag">C#</span>
                     <span class="tag">OpenXR</span>
+                    <span class="tag">MakeHuman</span>
                     <span class="tag">Quest 2</span>
                     <a href="https://github.com/igor-iurevici/Divergences" target="_blank" class="code-link">Code</a>
                 </div>
