--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                     <span class="tag">C#</span>
                     <span class="tag">OpenXR</span>
                     <span class="tag">ProBuilder</span>
+                    <span class="tag">Eye tracking</span>
                     <span class="tag">HTC Vive Pro</span>
                     <a href="https://github.com/igor-iurevici/iurevici-igor-ue-in-vr" target="_blank" class="code-link">Code</a>
                 </div>
@@ -117,6 +118,7 @@
                     <span class="tag">Unity</span>
                     <span class="tag">C#</span>
                     <span class="tag">OpenXR</span>
+                    <span class="tag">ProBuilder</span>
                     <span class="tag">Quest 2</span>
                     <a href="https://github.com/igor-iurevici/Divergences" target="_blank" class="code-link">Code</a>
                 </div>
@@ -150,6 +152,7 @@
                     <span class="tag">Unity</span>
                     <span class="tag">C#</span>
                     <span class="tag">OpenXR</span>
+                    <span class="tag">ProBuilder</span>
                     <span class="tag">MakeHuman</span>
                     <span class="tag">Quest 2</span>
                     <a href="https://github.com/igor-iurevici/EmbodimentVR" target="_blank" class="code-link">Code</a>
