--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                     <div class="project-details">
                         <p>
                             BoloFence is a concept of an Android turistic app for Bologna city.<br/>
-                            The app recognizes the user mobility type (walk, bike or car) and accordingly triggers a notification when the user enters an area of interest.<br/>
-                            A dashboard collects the user path data, preserving the privacy, and provides a ML clustering tool able to detect new potential areas of interest.
+                            The app recognizes the user mobility type (walk, bike or car) and accordingly triggers a notification when the user enters a specific area.<br/>
+                            A dashboard collects the user path data, preserving the privacy, and provides a ML clustering tool able to detect new high-flow areas.
                         </p>
                     </div>
                     <div class="project-images">
