added annotator project

--- a/index.html
+++ b/index.html
@@ -123,6 +123,35 @@
                 </div>
             </section>
 
+            <!-- BoloFence -->
+            <section class="subsection">
+                <h3 class="collapsible">BoloFence</h3>
+                <div class="dropdown">
+                    <div class="project-details">
+                        <p>
+                            BoloFence is a concept of an Android turistic app for Bologna city.<br/>
+                            The app recognizes the user mobility type (walk, bike or car) and accordingly triggers a notification when the user enters a specific area.<br/>
+                            A dashboard collects the user path data, preserving the privacy, and provides a ML clustering tool able to detect new high-flow areas.
+                        </p>
+                    </div>
+                    <div class="project-images">
+                        <img src="./images/bolofence/dashboard1.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/bolofence/dashboard2.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/bolofence/app1.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/bolofence/app2.png" alt="image" onclick="expandImage(this)">
+                        <img src="./images/bolofence/notification.png" alt="image" onclick="expandImage(this)">
+                    </div>
+                </div>
+                <div class="tag-container">
+                    <a href="https://github.com/igor-iurevici/BoloFence" target="_blank" class="code-link">Code</a>
+                    <span class="tag">CodeIgniter</span>
+                    <span class="tag">PHP</span>
+                    <span class="tag">PostgreSQL</span>
+                    <span class="tag">PostGIS</span>
+                    <span class="tag">Java</span>
+                </div>
+            </section>
+
             <!-- Antikythera -->
             <section class="subsection">
                 <h3 class="collapsible">Antikythera</h3>
@@ -158,33 +187,25 @@
                 </div>
             </section>
 
-            <!-- BoloFence -->
+            <!-- Annnotator -->
             <section class="subsection">
-                <h3 class="collapsible">BoloFence</h3>
+                <h3 class="collapsible">Annotator</h3>
                 <div class="dropdown">
-                  <!--<hr class="underline-subsection">-->
                     <div class="project-details">
                         <p>
-                            BoloFence is a concept of an Android turistic app for Bologna city.<br/>
-                            The app recognizes the user mobility type (walk, bike or car) and accordingly triggers a notification when the user enters a specific area.<br/>
-                            A dashboard collects the user path data, preserving the privacy, and provides a ML clustering tool able to detect new high-flow areas.
+                            A prototype of a text annotator for document classification developed during my internship at
+                            <a href="https://www.expert.ai" target="_blank">expert.ai</a>. </br>
+                            The web app aimed to improve the usability of the current system, so it followed a UI/UX design process and final testing.
                         </p>
-                    </div>
-                    <div class="project-images">
-                        <img src="./images/bolofence/dashboard1.png" alt="image" onclick="expandImage(this)">
-                        <img src="./images/bolofence/dashboard2.png" alt="image" onclick="expandImage(this)">
-                        <img src="./images/bolofence/app1.png" alt="image" onclick="expandImage(this)">
-                        <img src="./images/bolofence/app2.png" alt="image" onclick="expandImage(this)">
-                        <img src="./images/bolofence/notification.png" alt="image" onclick="expandImage(this)">
                     </div>
                 </div>
                 <div class="tag-container">
-                    <a href="https://github.com/igor-iurevici/BoloFence" target="_blank" class="code-link">Code</a>
-                    <span class="tag">CodeIgniter</span>
-                    <span class="tag">PHP</span>
-                    <span class="tag">PostgreSQL</span>
-                    <span class="tag">PostGIS</span>
-                    <span class="tag">Java</span>
+                    <span class="code-link" style="pointer-events: none";><s>Code</s></span>
+                    <span class="tag">Vue.js 2.0</span>
+                    <span class="tag">JavaScript</span>
+                    <span class="tag">Vuex</span>
+                    <span class="tag">ElementUI</span>
+                </div>
             </section>
 
         <!-- CONTACTS -->
