--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </div>
                 <div class="tag-container">
                     <span class="code-link" style="pointer-events: none";><s>Code</s></span>
-                    <span class="tag">Vue.js 2.0</span>
+                    <span class="tag">Vue.js</span>
                     <span class="tag">JavaScript</span>
                     <span class="tag">Vuex</span>
                     <span class="tag">ElementUI</span>
