--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                     <span class="tag">PHP</span>
                     <span class="tag">PostgreSQL</span>
                     <span class="tag">PostGIS</span>
+                    <span class="tag">Heroku</span>
                     <span class="tag">Java</span>
                 </div>
             </section>
