antikythera to embodiment

--- a/index.html
+++ b/index.html
@@ -155,18 +155,18 @@
 
             <!-- Antikythera -->
             <section class="subsection">
-                <h3 class="collapsible">Antikythera</h3>
+                <h3 class="collapsible">Embodiment</h3>
                 <div class="dropdown">
                     <div class="project-details">
                         <p>
-                            Antikythera is an embodiment project, started by 
+                            Embodiment is an avatar-based project, started by 
                             <a href="http://sassofederica.com" target="_blank">Federica Sasso</a>, 
                             that raise awareness on post-pandemic social difficulties. <br/>
                             The user is familiarized with the new virtual body, while the 
                             <a href="https://en.wikipedia.org/wiki/Liminal_space_(aesthetic)" target="_blank">Liminal Space</a> virtual environment 
                             fills with a crowd of people that gradually surrounds the user. <br/>
-                            Highlights of the development process have been exhibited at the
-                            <a href="https://www.vogue.com/photovogue/festival" target="_blank">PhotoVogue Festival</a> 2022.
+                            Highlights of the experience have been exhibited at the
+                            <a href="https://www.vogue.com/photovogue/festival" target="_blank">PhotoVogue Festival</a> 2022, under the Antikythera name.
                         </p>
                     </div>
                     <div class="project-images">
