--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                     <span class="tag">ElementUI</span>
                 </div>
             </section>
+        </section>
 
         <!-- CONTACTS -->
         <section class="contact">
