--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2>About</h2>
             <p>
                 Hello world!<br/>
-                I'm a software developer, building realistic immersive virtual experiences. <br/>
+                I'm a software developer with a passion in delivering immersive virtual experiences. <br/>
                 I like to try and explore new XR tech - but also pixel art and live coding.
             </p>
         </section>
