--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>
                 Hello world!<br/>
                 I'm a software developer with a passion in delivering immersive virtual experiences. <br/>
-                Constantly deep-diving into the newest XR tech - but also in love with pixel art and music live coding music.
+                Constantly deep diving into the newest XR tech - but also in love with pixel art and music live coding music.
             </p>
         </section>
         <section class="projects">
