--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <h2>About</h2>
             <p>
                 Hello world!<br/>
-                I'm a software developer with a passion in delivering immersive virtual experiences. <br/>
-                Constantly deep diving into the newest XR tech - but also in love with pixel art and music live coding music.
+                I'm a software developer, passionate in delivering immersive digital experiences. <br/>
+                Constantly deep diving into the newest tech, especially XR - but also in love with mountains, pixel art and live coding music.
             </p>
         </section>
         <section class="projects">
